# mediscan-ai

./: .gitignore  Procfile  README.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
openspec/: project.md
openspec/changes/add-prescription-scan-api/: design.md  proposal.md  tasks.md
openspec/changes/add-prescription-scan-api/specs/prescription-scan/: spec.md
src/mediscan_ai/: __init__.py  main.py  models.py  services.py
tests/: __init__.py  test_main.py
